# Project_5_Habit_Tracker

./: .env.exemple  Dockerfile  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: settings.py  urls.py
habit/: admin.py  models.py  paginators.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habit/migrations/: 0001_initial.py  0002_initial.py
nginx/: Dockerfile  nginx.conf
users/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
